--- a/package.json
+++ b/package.json
@@ -27,17 +27,19 @@
   "dependencies": {
     "@prisma/client": "^4.0.0",
     "axios": "^0.27.2",
+    "bootstrap": "^5.1.3",
     "next": "12.2.0",
+    "react": "^18.0.0",
+    "react-bootstrap": "^2.4.0",
     "react-dom": "^18.0.0",
-    "react-icons": "^4.3.1",
-    "react": "^18.0.0"
+    "react-icons": "^4.3.1"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.0.3",
     "@commitlint/config-conventional": "^17.0.3",
     "@types/node": "^18.0.3",
-    "@types/react-dom": "^18.0.0",
     "@types/react": "^18.0.0",
+    "@types/react-dom": "^18.0.0",
     "commitizen": "^4.2.4",
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "^8.18.0",
